--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,4 +11,8 @@ $highlight: #41caff;
 $light-grey: #ccc;
 $mid-grey: #aaa;
 
+$min-scr-width: 320px;
+$scr-width-xs:  479px;
+$scr-width-sm:  639px;
+$scr-width-md:  1023px;
 $max-scr-width: 1890px;
